# python-ecommerce-project

./: README.md  pyproject.toml  requirements.txt
ecommerce/: Dockerfile  docker-compose.yml  main.py
ecommerce/app/: config.py  database.py
ecommerce/app/cli/: admin_cli.py  auth_cli.py  cart_cli.py  catalog_cli.py  orders_cli.py  ui.py
ecommerce/app/dashboard/: analytics_dashboard.py
ecommerce/app/models/: __init__.py  order.py  product.py  user.py
ecommerce/app/repositories/: __init__.py  order_repo.py  product_repo.py  user_repo.py
ecommerce/app/services/: __init__.py  analytics_service.py  cart_service.py  order_service.py
ecommerce/app/utils/: auth.py  decorators.py
ecommerce/scripts/: docker-entrypoint.sh  seed.py
ecommerce/tests/: test_ecommerce.py
notebook/: learning_code.ipynb  live_notes.ipynb  prompts.ipynb
