[project]
name = "python-ecommerce-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "faker>=21.0.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=5.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "rich>=13.7.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.0",
    "tabulate>=0.9.0",
    "textual>=0.47.0",
    "typer>=0.9.0",
]
